@@ -34,6 +34,7 @@ Bugs fixed:
 - 1893300 Fixed More memory leaks in associators and associatorNames
 - 1896551 Fixed Memory leak on loadProvider() failure
 - 1914551 Fixed sfcb file descriptor leaks
+- 1928685 Fixed sfcb httpAdapter memory leak while authenticating
 
 Changes in 1.2.5
 ================
